--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,12 @@ body {
     box-sizing: border-box;
     font-family: "Inter";
     scroll-behavior: smooth;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 @font-face {
